--- a/static/views/OneWayResult/OneWayResult.css
+++ b/static/views/OneWayResult/OneWayResult.css
@@ -24,14 +24,40 @@
     justify-content: flex-start;
     align-items: stretch;
     margin: 10px 10px;
+    height:1000px;
 }
+
+.resultPanel{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    margin: 10px 10px;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
+}
+
+.resultPanel::-webkit-scrollbar{
+    display: none;
+}
+
+
 
 .container {
     margin: 10px 10px;
+    padding-right:20px;
     border-style: solid;
     border-width: 2px;
     border-radius: 20px;
     border-color: blue;
+}
+
+
+.checkBoxAndLabelCombinedContainer{
+    display: inline-flex;
+    margin:0px;
 }
 
 .title {
@@ -49,12 +75,12 @@
     border-color: grey;
 }
 
-.timeTitle {
+.timeIntervalTitle {
     font-weight: 700;
     margin: 5px 10px;
 }
 
-.buttonimg {
+.timeIntervalImage {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -68,16 +94,20 @@
 }
 
 .subContainer {
-    margin: 5px 20px;
+    margin:5px 0px 5px 20px;
+    display:flex;
+    justify-content: space-between;
 }
 
 .titlelabel {
-    margin: 0px 80px 0px 10px;
+    float:left;
 }
 
 .price {
     text-align: right;
     display: inline;
+    margin: 0px;
+    
 }
 
 .sortHeaders {
@@ -86,11 +116,10 @@
     margin: 10px 20px;
     padding: 10px 10px;
     background-color: lightgrey;
-    width: 600px;
+    width: 800px;
 }
 
 .sortBy {
-    flex-grow: 1;
     align-self: center;
     color: black;
     font-size: 20px;
