--- a/static/views/OneWayResult/OneWayResult.css
+++ b/static/views/OneWayResult/OneWayResult.css
@@ -131,3 +131,25 @@
     width: 100px;
     text-align: center;
 }
+
+.sortingColumnContainer{
+    display:flex;
+    flex-wrap:wrap;
+    flex-grow:2;
+    align-items:center;
+    justify-content:space-between;
+    align-items:center;
+}
+.roundWayPrice{
+    flex-grow:1;
+    align-self:center;
+    color:black;
+    font-size:20px;
+}
+
+.roundWayIndividualSortELement{
+    flex: 1 1 30%;
+    color:black;
+    font-size:20px;
+    text-align: center;
+}
