--- a/static/views/OneWayResult/OneWayResult.css
+++ b/static/views/OneWayResult/OneWayResult.css
@@ -130,6 +130,17 @@
     margin: auto;
     width: 100px;
     text-align: center;
+    font-weight: normal;
+    color:black;
+}
+
+.individualSortELementAfterClicked{
+    font-size: 25px;
+    margin: auto;
+    width: 100px;
+    text-align: center;
+    color: #023047;
+    font-weight:bold;
 }
 
 .sortingColumnContainer{
@@ -152,4 +163,14 @@
     color:black;
     font-size:20px;
     text-align: center;
+    font-weight: normal;
+}
+
+.roundWayIndividualSortELementAfterClicked{
+    flex: 1 1 30%;
+    color:black;
+    font-size:25px;
+    text-align: center;
+    color: #023047;
+    font-weight:bold;
 }
