--- a/static/components/FromToDepart/FromToDepart.css
+++ b/static/components/FromToDepart/FromToDepart.css
@@ -1,15 +1,30 @@
-div{
+.fromToDepartContainer {
     display: none;
-    height:auto;
-    width:fit-content;
     color: blue;
     font-size: 20px;
     font-family: Georgia, serif;
 }
-.fromtodepartlabel{
-    display: inline-block;
+
+.oneWay {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
-.from{
+
+.roundTrip {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.multiCity {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+/* .fromtodepartDatelabel{
+    display: inline-block;
+} */
+
+/* .from{
     display:inline-block;
     margin:5px 20px 5px 5px;
 }
@@ -17,19 +32,138 @@ div{
     display:inline-block;
     margin:5px 20px 5px 5px;
 }
-.depart{
+.departDate{
     display: inline-block;
     margin:5px 20px 5px 5px;
+} */
+
+.fromOneWay {
+    grid-row: 1/2;
+    grid-column: 1/3;
 }
-.add{
-    display:inline-block;
+
+.toOneWay {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+
+.departDateOneWay {
+    grid-row: 1/2;
+    grid-column: 3/3;
+}
+
+.fromRoundTrip {
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+.toRoundTrip {
+    grid-row: 1/2;
+    grid-column: 2/2;
+}
+
+.departDateRoundTrip {
+    grid-row: 2/2;
+    grid-column: 1/2;
+}
+
+.returnDateRoundTrip {
+    grid-row: 2/2;
+    grid-column: 2/2;
+}
+
+.fromMultiCity {
+    grid-row: 1;
+    grid-column: 1/4;
+}
+
+.toMultiCity {
+    grid-row: 1;
+    grid-column: 2/4;
+}
+
+.departDateMultiCity {
+    grid-row: 1;
+    grid-column: 3/4;
+}
+
+.returnDateMultiCity,
+.returnDateOneWay {
+    display: none;
+}
+
+.addDeleteButtonOneWay,
+.addDeleteButtonRoundTrip {
+    display: none;
+}
+
+.addDeleteButtonMultiCity {
+    grid-row: 1;
+    grid-column: 4/4;
+}
+
+.addButtonShow {
+    display: inline-block;
+}
+
+.addButtonHide {
+    display: none;
+}
+
+.deleteButtonShow {
+    display: inline-block;
+}
+
+.deleteButtonHide {
+    display: none;
+}
+
+.adultAndChildLabel {
+    color: blue;
+    font-size: 20px;
+    font-family: Georgia, serif;
+}
+
+.adultInput,
+.childInput {
     background-color: white;
-    border-radius:50%;
+    border-radius: 50%;
     border-color: blue;
 }
-.delete{
-    display:inline-block;
-    background-color: white;
-    border-radius:50%;
-    border-color: blue;
+
+.adultOneWay {
+    grid-row: 2/2;
+    grid-column: 1/3;
+}
+
+.childOneWay {
+    grid-row: 2/2;
+    grid-column: 2/3;
+}
+
+.adultRoundTrip {
+    grid-row: 3/3;
+    grid-column: 1/2;
+}
+
+.childRoundTrip {
+    grid-row: 3/3;
+    grid-column: 2/2;
+}
+
+.adultMultiCityShow {
+    display: block;
+    grid-row: 2;
+    grid-column: 1/4;
+}
+
+.childMultiCityShow {
+    display: block;
+    grid-row: 2;
+    grid-column: 2/4;
+}
+
+.adultMultiCityHide,
+.childMultiCityHide {
+    display: none;
 }
