--- a/static/style.css
+++ b/static/style.css
@@ -51,7 +51,7 @@
     font-family: Georgia, serif;
 }
 
-.returndate{
+/* .returndate{
     display:none;
 }
 
@@ -61,24 +61,21 @@
 
 .adult{
     display:none;
-    color:blue;
-    font-size: 20px;
-    font-family: Georgia, serif;
+    grid-row: last-child;
+    grid-column:1;
 }
-.adultinput{
-    display:none;
-    margin-right: 140px;
-    
-}
+
 .child{
     display:none;
+    grid-row: last-child;
+    grid-column:2;
+}
+
+.adultAndChildLabel{
     color:blue;
     font-size: 20px;
     font-family: Georgia, serif;
-}
-.childinput{
-    display:none;
-}
+} */
 
 .search{
     margin:5px 0px 5px 0px;
