started defining clean variable changed from-to-depart custom element to trip information

--- a/static/components/TripInformation/style.css
+++ b/static/components/TripInformation/style.css
@@ -167,3 +167,39 @@
 .childMultiCityHide {
     display: none;
 }
+
+
+
+
+.autoCompleteFormContainerShow {
+    padding: 10px 8px;
+    opacity: 1;
+    pointer-events: auto;
+
+}
+
+.autoCompleteFormContainerHide {
+    display:none;
+    padding: 0;
+    opacity: 0;
+    pointer-events: none;
+    max-height: 280px;
+    overflow-y: auto;
+}
+
+.listItemShow {
+    list-style: none;
+    padding: 8px 12px;
+    display: block;
+    width: 100%;
+    cursor: default;
+    border-radius: 3px;
+}
+
+.listItemHide {
+    display: block;
+}
+
+.listItemShow:hover {
+    background: #efefef;
+}
