--- a/static/components/TripInformation/style.css
+++ b/static/components/TripInformation/style.css
@@ -168,14 +168,17 @@
     display: none;
 }
 
-
-
-
 .autoCompleteFormContainerShow {
     padding: 10px 8px;
     opacity: 1;
     pointer-events: auto;
 
+}
+
+.autoCompleteFormContainerShow>ul{
+    width: 180px;
+    margin-block: 0px;
+    padding-inline: 45px;
 }
 
 .autoCompleteFormContainerHide {
@@ -188,6 +191,7 @@
 }
 
 .listItemShow {
+    font-size:16px;
     list-style: none;
     padding: 8px 12px;
     display: block;
