--- a/static/style.css
+++ b/static/style.css
@@ -85,3 +85,10 @@
     background-color: blue;
     
 }
+
+.displayError{
+    color:red;
+    font-size: 1.2rem;
+    text-align: center;
+    margin-top: 2%;
+}
