--- a/static/components/FlightCard/FlightCard.css
+++ b/static/components/FlightCard/FlightCard.css
@@ -1,11 +1,10 @@
 .card{
-    width:600px;
-    margin:20px;
-    padding:10px;
-    background-color:white;
-    outline:1px solid red;
-    border-radius:15px;
-    box-shadow:2px 2px 15px 1px red;
+    width: 600px;
+    margin: 20px;
+    padding: 10px;
+    background-color: #d0bfd9;
+    border-radius: 15px;
+    box-shadow: 0px 0px 20px 2px #fda94e;
 }
 .flex-row{
     display:flex;
