--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,17 @@
-.header{
-    background-color: black;
+body {
+  background:url(//images.weserv.nl/?url=i.imgur.com/6QJjYMe.jpg);
 }
+
 .logo{
     width: fit-content;
     height: 6vw;
 }
+
 .navbar{
     width: 100%;
     display: inline-block;
 }
+
 .navbar a{
     float:right;
     padding:0.5vw;
@@ -17,6 +20,7 @@
 .material-icons{
     color:#66D3FA;
 }
+
 .material-icons.md-3{font-size: 3vw;}
 .nav-button{
     background-color: black;
@@ -25,7 +29,14 @@
 }
 
 .boxform{
-    box-shadow: 0px 0px 2px 2px blue;
+    border: 2px solid #fff;
+    box-shadow:
+            0 0 4px #fff,
+            inset 0 0 4px #fff,
+            0 0 8px #08f,
+            inset 0 0 8px #08f;
+            /* 0 0 4rem #08f,
+            inset 0 0 4rem #08f;     */
     padding:20px 20px;   
 }
 
@@ -37,12 +48,20 @@
     color:blue;
     margin:1px;
 }
+
 .triptypelabels{
-    margin-right: 50px;
+    /* margin-right: 50px;
     display: inline;
     color:blue;
     font-size: 20px;
     font-family: Georgia, serif;
+    margin-bottom: 5px; */
+    margin-right:50px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
+      color: #fff6a9;
+    font-family: "Sacramento", cursive;
 }
 .labels{
     display: inline;
@@ -77,13 +96,33 @@
     font-family: Georgia, serif;
 } */
 
-.search{
+/* .search{
     margin:5px 0px 5px 0px;
     display:none;
     font-size: 20px;
     padding:5px 10px;
-    background-color: blue;
-    
+    background-color: gold;
+    color: black;
+} */
+
+.search {
+    display: none;
+    color: green;
+    border: 2px solid green;
+    border-radius: 8px;
+    margin: 10px 0px 10px 0px;
+    font-size: 20px;
+    padding: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    filter: drop-shadow(0 0 15px green) drop-shadow(0 0 50px green) contrast(2) brightness(2);
+    transition: .5s;
+}
+  
+.search:hover {
+    color: black;
+    background-color: green;
+    filter: drop-shadow(0 0 20px green) contrast(2) brightness(2);
 }
 
 .displayError{
