--- a/static/views/OneWayAndRoundTripHandler/OneWayAndRoundTripHandler.css
+++ b/static/views/OneWayAndRoundTripHandler/OneWayAndRoundTripHandler.css
@@ -199,9 +199,9 @@
 }
 
 .tripTitle {
-    border-style:solid;
-    border-color: red;
     margin-top: 5px;
+    border: 2px solid #CD7F32;
+    box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #CD7F32, inset 0 0 8px #CD7F32;
 }
 
 .tripDescription {
@@ -209,6 +209,8 @@
     text-align: center;
     font-weight: bold;
     margin: 10px 0px 10px 0px;
+    color: white;
+    text-shadow: 0px 0px 5px #DDA0DD;
 }
 
 .prevButtonTripDescription {
