--- a/static/components/FlightCard/FlightCard.css
+++ b/static/components/FlightCard/FlightCard.css
@@ -1,5 +1,4 @@
 .card{
-    width: 600px;
     margin: 20px;
     padding: 10px;
     background-color: #d0bfd9;
@@ -16,6 +15,10 @@
 .flex-row>div{
     margin:0 40px;
     text-align:left;
+}
+.carrier-name{
+    font-weight: 800;
+    font-size: 1.5rem;
 }
 .time{
     font-weight: bold;
