--- a/static/style.css
+++ b/static/style.css
@@ -1,73 +1,68 @@
 body {
-  background:url(//images.weserv.nl/?url=i.imgur.com/6QJjYMe.jpg);
+  background: url(//images.weserv.nl/?url=i.imgur.com/6QJjYMe.jpg);
 }
 
-.logo{
-    width: fit-content;
-    height: 6vw;
+.logo {
+  width: fit-content;
+  height: 6vw;
 }
 
-.navbar{
-    width: 100%;
-    display: inline-block;
+.navbar {
+  width: 100%;
+  display: inline-block;
 }
 
-.navbar a{
-    float:right;
-    padding:0.5vw;
+.navbar a {
+  float: right;
+  padding: 0.5vw;
 }
 
-.material-icons{
-    color:#66D3FA;
+.material-icons {
+  color: #66d3fa;
 }
 
-.material-icons.md-3{font-size: 3vw;}
-.nav-button{
-    background-color: black;
-    border-width: 0px;
-    color:#66D3FA
+.material-icons.md-3 {
+  font-size: 3vw;
+}
+.nav-button {
+  background-color: black;
+  border-width: 0px;
+  color: #66d3fa;
 }
 
-.boxform{
-    border: 2px solid #fff;
-    box-shadow:
-            0 0 4px #fff,
-            inset 0 0 4px #fff,
-            0 0 8px #08f,
-            inset 0 0 8px #08f;
-            /* 0 0 4rem #08f,
-            inset 0 0 4rem #08f;     */
-    padding:20px 20px;   
+.boxform {
+  border: 2px solid #00FF40;
+  box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #00FF40, inset 0 0 8px #00FF40;
+  padding: 20px 20px;
 }
 
-.form{
-    display: block;
+.form {
+  display: block;
 }
 
-.triptype{
-    color:blue;
-    margin:1px;
+.triptype {
+  color: blue;
+  margin: 1px;
 }
 
-.triptypelabels{
-    /* margin-right: 50px;
+.triptypelabels {
+  /* margin-right: 50px;
     display: inline;
     color:blue;
     font-size: 20px;
     font-family: Georgia, serif;
     margin-bottom: 5px; */
-    margin-right:50px;
-    margin-bottom: 10px;
-    font-size: 20px;
-    text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
-      color: #fff6a9;
-    font-family: "Sacramento", cursive;
+  margin-right: 50px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: greenyellow;
 }
-.labels{
-    display: inline;
-    color:blue;
-    font-size: 20px;
-    font-family: Georgia, serif;
+
+.labels {
+  display: inline;
+  color: blue;
+  font-size: 20px;
+  font-family: Georgia, serif;
 }
 
 /* .returndate{
@@ -106,28 +101,29 @@ body {
 } */
 
 .search {
-    display: none;
-    color: green;
-    border: 2px solid green;
-    border-radius: 8px;
-    margin: 10px 0px 10px 0px;
-    font-size: 20px;
-    padding: 5px;
-    cursor: pointer;
-    font-weight: bold;
-    filter: drop-shadow(0 0 15px green) drop-shadow(0 0 50px green) contrast(2) brightness(2);
-    transition: .5s;
-}
-  
-.search:hover {
-    color: black;
-    background-color: green;
-    filter: drop-shadow(0 0 20px green) contrast(2) brightness(2);
+  display: none;
+  color: green;
+  border: 2px solid green;
+  border-radius: 8px;
+  margin: 10px 0px 10px 0px;
+  font-size: 20px;
+  padding: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  filter: drop-shadow(0 0 15px green) drop-shadow(0 0 50px green) contrast(2)
+    brightness(2);
+  transition: 0.5s;
 }
 
-.displayError{
-    color:red;
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 2%;
+.search:hover {
+  color: black;
+  background-color: green;
+  filter: drop-shadow(0 0 20px green) contrast(2) brightness(2);
+}
+
+.displayError {
+  color: red;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 2%;
 }
