--- a/static/views/OneWayAndRoundTripHandler/OneWayAndRoundTripHandler.css
+++ b/static/views/OneWayAndRoundTripHandler/OneWayAndRoundTripHandler.css
@@ -1,237 +1,235 @@
 .resultViewContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    row-gap: 5px;
-    border: 2px solid #00FF40;
-    box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #00FF40, inset 0 0 8px #00FF40;
-    margin-top:5px;
-
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  row-gap: 5px;
+  border: 2px solid #fff;
+  box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #08f, inset 0 0 8px #08f;
+  margin-top: 5px;
 }
 
 .filterPanel {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    margin: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin: 10px 10px;
 }
 
 .sortPanel {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    margin: 10px 10px;
-    height: 1000px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin: 10px 10px;
+  height: 1000px;
 }
 
 .resultPanel {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    margin: 10px 10px;
-    overflow-y: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin: 10px 10px;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .resultPanel::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
-
-
 
 .container {
-    margin: 10px 10px;
-    padding-right: 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 20px;
-    border: 2px solid #F7CAC9;
-    box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #F7CAC9, inset 0 0 8px #F7CAC9;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  border: 2px solid #f7cac9;
+  box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #f7cac9,
+    inset 0 0 8px #f7cac9;
 }
 
-
 .checkBoxAndLabelCombinedContainer {
-    display: inline-flex;
-    margin: 0px;
+  display: inline-flex;
+  margin: 0px;
 }
 
 .title {
-    font-weight: 790;
-    margin: 15px 0px 5px 20px;
-    font-family: 'Lato', sans-serif;
-    color:white;
-    background: #FDC830;
-    background: -webkit-linear-gradient(to right, #F37335, #FDC830);
-    background: linear-gradient(to right, #F37335, #FDC830);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+  margin-block-start: 0em;
+  margin-block-end: 0.25rem;
+  font-weight: 800;
+  font-family: "Lato", sans-serif;
+  color: white;
+  background: #fdc830;
+  background: -webkit-linear-gradient(to right, #f37335, #fdc830);
+  background: linear-gradient(to right, #f37335, #fdc830);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .timeIntervalButtonBeforeClicked {
-    display: inline-block;
-    margin: 5px 0px 15px 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 10px;
-    border-color: grey;
-    background-color: white;
+  display: inline-block;
+  margin: 5px 10px 5px 0px;
+  width: 105px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 10px;
+  border-color: grey;
+  background-color: white;
 }
 
 .timeIntervalButtonAfterClicked {
-    display: inline-block;
-    margin: 5px 0px 15px 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 10px;
-    border-color: #f5df4d;
-    background-color: #f5df4d;
+  display: inline-block;
+  margin: 5px 10px 5px 0px;
+  width: 105px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 10px;
+  border-color: #f5df4d;
+  background-color: #f5df4d;
 }
 
 .timeIntervalTitle {
-    font-weight: 700;
-    margin: 5px 10px;
+  font-weight: 700;
+  margin: 5px 10px;
 }
 
 .timeIntervalImage {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .buttonPrice {
-    font-weight: 700;
-    font-size: 15px;
-    text-align: center;
+  font-weight: 700;
+  font-size: 15px;
+  text-align: center;
 }
 
 .subContainer {
-    margin: 5px 0px 5px 20px;
-    display: flex;
-    justify-content: space-between;
-    color:white;
+  margin: 5px 0px 5px 0px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
 }
 
 .titlelabel {
-    float: left;
+  float: left;
 }
 
 .price {
-    text-align: right;
-    display: inline;
-    margin: 0px;
-
+  text-align: right;
+  display: inline;
+  margin: 0px;
 }
 
 .sortHeaders {
-    display: flex;
-    flex-direction: row;
-    margin: 10px 20px;
-    padding: 10px 10px;
-    background-color: lightgrey;
+  display: flex;
+  flex-direction: row;
+  margin: 10px 20px;
+  padding: 10px 10px;
+  background-color: lightgrey;
+  border-radius: 10px;
 }
 
 .sortBy {
-    align-self: center;
-    color: black;
-    font-size: 20px;
+  align-self: center;
+  color: black;
+  font-size: 20px;
 }
 
 .individualSortELement {
-    font-size: 20px;
-    margin: auto;
-    width: 100px;
-    text-align: center;
-    font-weight: normal;
-    color: black;
+  font-size: 20px;
+  margin: auto;
+  width: 100px;
+  text-align: center;
+  font-weight: normal;
+  color: black;
 }
 
 .individualSortELementAfterClicked {
-    font-size: 25px;
-    margin: auto;
-    width: 100px;
-    text-align: center;
-    color: #023047;
-    font-weight: bold;
+  font-size: 25px;
+  margin: auto;
+  width: 100px;
+  text-align: center;
+  color: #023047;
+  font-weight: bold;
 }
 
 .sortingColumnContainer {
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 2;
-    align-items: center;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 2;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .roundWayPrice {
-    flex-grow: 1;
-    align-self: center;
-    color: black;
-    font-size: 20px;
+  flex-grow: 1;
+  align-self: center;
+  color: black;
+  font-size: 20px;
 }
 
 .roundWayIndividualSortELement {
-    flex: 1 1 30%;
-    color: black;
-    font-size: 20px;
-    text-align: center;
-    font-weight: normal;
+  flex: 1 1 30%;
+  color: black;
+  font-size: 20px;
+  text-align: center;
+  font-weight: normal;
 }
 
 .roundWayIndividualSortELementAfterClicked {
-    flex: 1 1 30%;
-    color: black;
-    font-size: 25px;
-    text-align: center;
-    color: #023047;
-    font-weight: bold;
+  flex: 1 1 30%;
+  color: black;
+  font-size: 25px;
+  text-align: center;
+  color: #023047;
+  font-weight: bold;
 }
 
 .tripTitle {
-    margin-top: 5px;
-    border: 2px solid #CD7F32;
-    box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #CD7F32, inset 0 0 8px #CD7F32;
+  margin-top: 5px;
+  border: 2px solid #cd7f32;
+  box-shadow: 0 0 4px #fff, inset 0 0 4px #fff, 0 0 8px #cd7f32,
+    inset 0 0 8px #cd7f32;
 }
 
 .tripDescription {
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
-    margin: 10px 0px 10px 0px;
-    color: white;
-    text-shadow: 0px 0px 5px #DDA0DD;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  margin: 10px 0px 10px 0px;
+  color: white;
+  text-shadow: 0px 0px 5px #dda0dd;
 }
 
 .prevButtonTripDescription {
-    font-size: 25px;
-    margin-right: 5px;
+  font-size: 25px;
+  margin-right: 5px;
 }
 
 .tripSource {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .tripDestination {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
-
 .rightArrowTripDescription {
-    font-size: 25px;
-    margin-right: 5px;
+  font-size: 25px;
+  margin-right: 5px;
 }
 
 .nextButtonTripDescription {
-    font-size: 25px;
+  font-size: 25px;
 }
